--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Helvetica';
-  src: url('/fonts/Helvetica-Bold.woff2') format('woff2');
+  src: url('/fonts/Helvetica-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'TT Hoves Pro Trl Expanded';
-  src: url('/fonts/TT-Hoves-Pro-Light.woff2') format('woff2');
+  src: url('/fonts/TT-Hoves-Pro-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'TT Hoves Pro Trl Expanded';
-  src: url('/fonts/TT-Hoves-Pro-Medium.woff2') format('woff2');
+  src: url('/fonts/TT-Hoves-Pro-Medium.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
