--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,23 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;700&display=swap');
+
 @font-face {
-  font-family: 'Helvetica';
+  font-family: 'Helvetica', sans-serif;
   src: url('/fonts/Helvetica-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
-@font-face {
-  font-family: 'TT Hoves Pro Trl Expanded';
-  src: url('/fonts/BeVietnamPro-Light.woff2') format('woff2');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'TT Hoves Pro Trl Expanded';
-  src: url('/fonts/BeVietnamPro-Medium.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
+body {
+  font-family: 'TT Hoves Pro Trl Expanded', 'Be Vietnam Pro', sans-serif;
 }
